--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "expres": "^0.0.5",
+    "express": "^4.18.2",
+    "node": "^21.6.1"
   }
 }
